<resources>
    <string name="app_name">SwimTrackML</string>
    <string name="start_db">Start</string>
    <string name="start_gather_data">Gather Data</string>
    <string name="start_show_sensor">Show Available Sensors</string>
    <string name="start_show_data">Show Data</string>
    <string name="start_do_ml_prediction">Do ML Prediction</string>
    <string name="gather_walking_data">Gather Walking Data</string>
    <string name="Save_Sensor_As_CSV">Save Sensor As CSV</string>
    <string name="Show_Data_Btn_show">Show</string>
    <string name="linechart_txt">Run</string>
    <string name="viewGithub">view Github</string>
    <string name="actionSaveSensorData">Save Sensor Data</string>
    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleFilled">Toggle Filled</string>
    <string name="actionToggleCircles">Toggle Circles</string>
    <string name="actionToggleCubic">Toggle Cubic</string>
    <string name="actionToggleStepped">Toggle Stepped</string>
    <string name="actionToggleHorizontalCubic">Toggle Horizontal Cubic</string>
    <string name="actionTogglePinch">Toggle Pinch</string>
    <string name="actionToggleAutoScale">Toggle Auto Scale</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="animateX">Animate X</string>
    <string name="animateY">Animate Y</string>
    <string name="animateXY">Animate XY</string>
    <string name="actionSave">Save</string>
    <string name="show_line_chart">Show Line Chart</string>
    <string name="actionLoadSensorData">Load Sensor Data</string>
    <string name="start_measuring">Start Measuring</string>
</resources>