<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/start_gather_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_gather_data" />

    <Button
        android:id="@+id/start_show_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_show_sensor" />

    <Button
        android:id="@+id/start_show_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_show_data" />

    <Button
        android:id="@+id/start_do_ml_prediction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_do_ml_prediction" />

    <Button
        android:id="@+id/gather_walking_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gather_walking_data" />

    <Button
        android:id="@+id/save_sensor_as_csv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save_Sensor_As_CSV" />

    <Button
        android:id="@+id/show_line_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_line_chart" />
</LinearLayout>